--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.testng:testng:7.1.0'
+    testImplementation(platform("org.junit:junit-bom:5.9.1"))
+    testImplementation("org.junit.jupiter:junit-jupiter")
+    testImplementation("org.testng:testng:7.1.0")
 }
 
-test {
+tasks.test {
+    useJUnitPlatform()
     useTestNG()
 }
